[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/settings/settings.gd" type="Script" id=1]

[node name="SettingsNode" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 24
custom_constants/margin_top = 24
custom_constants/margin_left = 24
custom_constants/margin_bottom = 24
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 1000.0
margin_bottom = 576.0

[node name="Settings" type="VBoxContainer" parent="HBox"]
margin_right = 835.0
margin_bottom = 552.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="HBox/Settings"]
margin_right = 835.0
margin_bottom = 64.0

[node name="Labels" type="VBoxContainer" parent="HBox/Settings/HBox"]
margin_right = 84.0
margin_bottom = 64.0

[node name="FullScreen" type="Label" parent="HBox/Settings/HBox/Labels"]
margin_right = 84.0
margin_bottom = 21.0
size_flags_vertical = 3
text = "FullScreen"
valign = 1

[node name="MainVol" type="Label" parent="HBox/Settings/HBox/Labels"]
margin_top = 25.0
margin_right = 84.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Main Volume"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Effects" type="Label" parent="HBox/Settings/HBox/Labels"]
margin_top = 50.0
margin_right = 84.0
margin_bottom = 64.0
text = "Effects"

[node name="Options" type="VBoxContainer" parent="HBox/Settings/HBox"]
margin_left = 88.0
margin_right = 216.0
margin_bottom = 64.0

[node name="FullScreen" type="CheckBox" parent="HBox/Settings/HBox/Options"]
margin_right = 128.0
margin_bottom = 24.0

[node name="MainVol" type="HSlider" parent="HBox/Settings/HBox/Options"]
margin_top = 28.0
margin_right = 128.0
margin_bottom = 44.0
rect_min_size = Vector2( 128, 0 )

[node name="EffectsVol" type="HSlider" parent="HBox/Settings/HBox/Options"]
margin_top = 48.0
margin_right = 128.0
margin_bottom = 64.0

[node name="HSeparator" type="HSeparator" parent="HBox/Settings"]
margin_top = 68.0
margin_right = 835.0
margin_bottom = 72.0

[node name="ConfirmSection" type="HBoxContainer" parent="HBox/Settings"]
margin_left = 364.0
margin_top = 76.0
margin_right = 470.0
margin_bottom = 96.0
size_flags_horizontal = 4

[node name="ApplyButton" type="Button" parent="HBox/Settings/ConfirmSection"]
margin_right = 48.0
margin_bottom = 20.0
size_flags_horizontal = 4
size_flags_vertical = 2
text = "Apply"

[node name="CancelButton" type="Button" parent="HBox/Settings/ConfirmSection"]
margin_left = 52.0
margin_right = 106.0
margin_bottom = 20.0
size_flags_vertical = 0
text = "Cancel"

[node name="Label" type="Label" parent="HBox"]
margin_left = 839.0
margin_right = 976.0
margin_bottom = 116.0
size_flags_horizontal = 9
size_flags_vertical = 0
text = "Maded by:
- PixelStrength (Code)
- Exotic Cryptid
- sgt. Crawford
- Peanut
- CandyToneky
- AnidemDex"
[connection signal="value_changed" from="HBox/Settings/HBox/Options/MainVol" to="." method="_on_MainVol_value_changed"]
[connection signal="value_changed" from="HBox/Settings/HBox/Options/EffectsVol" to="." method="_on_EffectsVol_value_changed"]
[connection signal="pressed" from="HBox/Settings/ConfirmSection/ApplyButton" to="." method="_on_ApplyButton_pressed"]
[connection signal="pressed" from="HBox/Settings/ConfirmSection/CancelButton" to="." method="_on_CancelButton_pressed"]
